Wed Feb 12 12:32:57 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/RTCORBA/Client_Protocol/svc.conf:
	* tests/RTCORBA/Server_Protocol/server_iiop.conf:
	* tests/RTCORBA/Server_Protocol/server_reverse.conf:
	* tests/RTCORBA/Server_Protocol/server_reverse_nt.conf:
	* tests/RTCORBA/Server_Protocol/server_shmiop.conf:
	* tests/RTCORBA/Server_Protocol/server_uiop.conf:  Added
	  scheduling policy information to the above configuration
	  files. This should fix the problems that shows up in our daily
	  builds.


Wed Feb 12 12:14:13 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* utils/catior/catior.cpp: Fixed a warning in g++ builds.

Wed Feb 12 00:45:04 UTC 2003  Craig Rodrigues <crodrigu@bbn.com>

	* tao/MCAST_Paser.cpp: Add improved diagnostic message when
	  locating NameService via multicast fails.

Wed Feb 12 00:19:58 UTC 2003  Craig Rodrigues <crodrigu@bbn.com>

	* tao/RTCORBA/Linear_Priority_Mapping.cpp (to_CORBA): 
	  Unconditionally display error message upon priority mapping failure.
	* tao/RTCORBA/RT_Protocol_Hooks.cpp: Display errno value and message
	  if setting the native thread priority fails.
	* tao/RTCORBA/RT_ORBInitiializer.h:
	  Create a new class member variable sched_policy_flags_.
	  The value of sched_policy_flags_ is a bitmask value that can be one of
	  THR_SCHED_RR, THR_SCHED_FIFO, THR_SCHED_DEFAULT, etc.  
	  sched_policy_flags_ value is stored in the 
	  TAO_ORB_Core TAO_ORB_Parameters structure.  
	  In TAO_Thread_Lane::create_dynamic_threads(), the sched_policy_flags_
	  is passed to the ACE_Task_Base::activate() call for creating new
	  threads for a RTCORBA thread pool.

	  sched_policy_ is an integer value that can be one of
	  ACE_SCHED_RR, ACE_SCHED_FIFO, ACE_SCHED_OTHER, etc.  This value
	  can be passed directly to the newly modified ACE_OS::thr_setpriority()
	  call.  For POSIX pthreads, this value maps directly to the
	  policy parameter of the pthread_setschedparam() call.